# tim2dump

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/: image_converter.cpp  image_converter.h  main.cpp  table_formatter.cpp  table_formatter.h  tim2_parser.cpp  tim2_parser.h  tim2_types.h  utils.h
